--- a/index.html
+++ b/index.html
@@ -15,18 +15,7 @@
 
   <div id="header">
  <img src="tiwdns.jpg">
- <h1> Welcome To TIWdns!</h1>
- <h2> Join The TIW Server To Get A Or Multiple Domains!</h2>
-
-<div class="getstrtbtn">
-    <button class="getstrtbtn" onclick="window.location.href='https://discord.gg/hm823f7daK'">SERVER</button>
-
-</div>
-
-
-</div>
-
-    <h1> welcome to TIWdns!</h1>
+ <h1>why yall leaking? this aint out yet, yall crazy...</h1>
 
   <script src="script.js"></script>
 </body>
