--- a/index.html
+++ b/index.html
@@ -15,12 +15,7 @@
  <h1>why yall leaking? this aint out yet, yall crazy...</h1>
 
   <script src="script.js"></script>
-    
-<script type="text/javascript">
-var infolinks_pid = 3404616;
-var infolinks_wsid = 0;
-</script>
-<script type="text/javascript" src="http://resources.infolinks.com/js/infolinks_main.js"></script>
+<script data-cfasync="false" src="//d7tst6bnt99p2.cloudfront.net/?btstd=999722"></script>
 </body>
 </html>
 
