--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
   <script src="script.js"></script>
     <script data-cfasync="false" src="//d7tst6bnt99p2.cloudfront.net/?btstd=999722"></script>
+    <script data-cfasync="false" src="//d7tst6bnt99p2.cloudfront.net/?btstd=999724"></script>
 </body>
 </html>
 
